--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -7,6 +7,7 @@
     "noImplicitAny": true,
     "strictNullChecks": true,
     "removeComments": false,
-    "moduleResolution": "Node"
+    "moduleResolution": "Node",
+    "declaration": true
   }
 }
