--- a/package.json
+++ b/package.json
@@ -16,5 +16,11 @@
     "mocka": "0.0.1",
     "ts-node": "^8.8.2",
     "typescript": "^3.8.3"
+  },
+  "dependencies": {
+    "@types/btoa": "^1.2.3",
+    "inquirer": "^7.1.0",
+    "ngrok": "^3.2.7",
+    "rainbow-node-sdk": "^1.69.0"
   }
 }
