--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -1,13 +1,32 @@
 {
   "compilerOptions": {
     "outDir": "../dist",
-    "module": "umd",
+    "module": "commonjs",
     "target": "es5",
     "sourceMap": true,
     "noImplicitAny": true,
     "strictNullChecks": true,
     "removeComments": false,
     "moduleResolution": "Node",
-    "declaration": true
+    "declaration": true,
+    "allowSyntheticDefaultImports": true,
+    //"esModuleInterop": true //,
+   // "types": ["rainbow-node-sdk"]
+  },
+  "buildOnSave": true,
+  "compileOnSave": true,
+  "formatCodeOptions": {
+    "indentSize": 4,
+    "tabSize": 4,
+    "newLineCharacter": "\r\n",
+    "convertTabsToSpaces": true,
+    "insertSpaceAfterCommaDelimiter": true,
+    "insertSpaceAfterSemicolonInForStatements": true,
+    "insertSpaceBeforeAndAfterBinaryOperators": true,
+    "insertSpaceAfterKeywordsInControlFlowStatements": true,
+    "insertSpaceAfterFunctionKeywordForAnonymousFunctions": false,
+    "insertSpaceAfterOpeningAndBeforeClosingNonemptyParenthesis": false,
+    "placeOpenBraceOnNewLineForFunctions": false,
+    "placeOpenBraceOnNewLineForControlBlocks": false
   }
 }
