--- a/package.json
+++ b/package.json
@@ -10,17 +10,17 @@
   "author": "V Berder",
   "license": "ISC",
   "devDependencies": {
-    "@types/mocha": "^7.0.2",
-    "@types/node": "^13.11.1",
-    "mocha": "^7.1.1",
+    "@types/mocha": "^8.2.0",
+    "@types/node": "^14.14.21",
+    "mocha": "^8.2.1",
     "mocka": "0.0.1",
-    "ts-node": "^8.8.2",
-    "typescript": "^3.8.3"
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.3"
   },
   "dependencies": {
     "@types/btoa": "^1.2.3",
-    "inquirer": "^7.1.0",
-    "ngrok": "^3.2.7",
-    "rainbow-node-sdk": "^1.69.0"
+    "inquirer": "^7.3.3",
+    "ngrok": "^3.4.0",
+    "rainbow-node-sdk": "^1.82.0-debug.0"
   }
 }
