--- a/package.json
+++ b/package.json
@@ -10,17 +10,17 @@
   "author": "V Berder",
   "license": "ISC",
   "devDependencies": {
-    "@types/mocha": "^8.2.0",
-    "@types/node": "^14.14.21",
-    "mocha": "^8.2.1",
+    "@types/mocha": "^8.2.3",
+    "@types/node": "^14.18.0",
+    "mocha": "^8.4.0",
     "mocka": "0.0.1",
     "ts-node": "^9.1.1",
-    "typescript": "^4.1.3"
+    "typescript": "^4.5.2"
   },
   "dependencies": {
     "@types/btoa": "^1.2.3",
     "inquirer": "^7.3.3",
-    "ngrok": "^3.4.0",
-    "rainbow-node-sdk": "^1.82.0-debug.0"
+    "ngrok": "^3.4.1",
+    "rainbow-node-sdk": "^2.25.2-lts.10"
   }
 }
