--- a/package.json
+++ b/package.json
@@ -4,23 +4,24 @@
   "description": "test rainbow-node-sdk release version",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "V Berder",
   "license": "ISC",
   "devDependencies": {
-    "@types/mocha": "^8.2.3",
-    "@types/node": "^14.18.0",
-    "mocha": "^8.4.0",
+    "@types/mocha": "^10.0.7",
+    "@types/node": "^20.14.10",
+    "mocha": "^10.6.0",
     "mocka": "0.0.1",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.5.2"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   },
   "dependencies": {
-    "@types/btoa": "^1.2.3",
-    "inquirer": "^7.3.3",
-    "ngrok": "^3.4.1",
+    "@types/btoa": "^1.2.5",
+    "inquirer": "^10.0.1",
+    "ngrok": "^5.0.0-beta.2",
     "rainbow-node-sdk": "^2.25.2-lts.10"
   }
 }
