--- a/package.json
+++ b/package.json
@@ -23,6 +23,6 @@
     "@types/btoa": "^1.2.5",
     "inquirer": "^10.0.1",
     "ngrok": "^5.0.0-beta.2",
-    "rainbow-node-sdk": "^2.25.2-lts.10"
+    "rainbow-node-sdk": "^2.30.0"
   }
 }
